--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kollers.cz",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -11,7 +12,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
